@@ -3,7 +3,8 @@
 @section('password.edit')
     <div class="container">
         <h1 class="text-center" >Change Password</h1>
-    
+        
+        
     </div>
 
 @endsection
